retoques JugadorTest